--- a/nodejs/ninja/views/about.html
+++ b/nodejs/ninja/views/about.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Node.js Crash Course</title>
 </head>
-<body>
-  <h1>About</h1>
+<h1>About</h1>
   <h2>Your path to becoming a Node.js ninja!</h2>
-</body>
+  <nav>
+    <a href="/">Homepage</a>
+    <a href="/about">About page</a>
+  </nav>
 </html>
